--- a/tests/JsonSettings.Tests.NetStandard/JsonSettings.Tests.NetStandard.csproj
+++ b/tests/JsonSettings.Tests.NetStandard/JsonSettings.Tests.NetStandard.csproj
@@ -13,7 +13,10 @@
   <ItemGroup>
   <PackageReference Include="FluentAssertions" Version="4.19.4" />
   <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.NewtonsoftJson" Version="5.0.1" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+  <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
+  <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
   <PackageReference Include="NUnit" Version="3.9.0" />
   <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
   <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -23,4 +26,6 @@
     <ProjectReference Include="..\..\src\Autosave\JsonSettings.Autosave.csproj" />
     <ProjectReference Include="..\..\src\JsonSettings.csproj" />
   </ItemGroup>
+
+  <Import Project="..\JsonSettings.Tests.Shared\JsonSettings.Tests.Shared.projitems" Label="Shared" />
 </Project>
