Solution Restructure, Tests.NetStandard now targets .net48 and .net5-windows

--- a/examples/JsonSettings.Examples.csproj
+++ b/examples/JsonSettings.Examples.csproj
@@ -36,8 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Autosave\JsonSettings.Autosave.csproj" />
-    <ProjectReference Include="..\src\JsonSettings.csproj" />
+    <ProjectReference Include="..\src\Nucs.JsonSettings.Autosave\JsonSettings.Autosave.csproj" />
+    <ProjectReference Include="..\src\Nucs.JsonSettings\JsonSettings.csproj" />
   </ItemGroup>
 
   <ItemGroup>
